--- a/package.json
+++ b/package.json
@@ -1,43 +1,81 @@
 {
-  "name": "open-react-template",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@solana/spl-token": "^0.1.8",
-    "@solana/web3.js": "^1.24.1",
-    "classnames": "^2.2.6",
-    "lodash": "^4.17.15",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-ga": "^2.7.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "name": "@solana/wallet-adapter-example",
+    "version": "0.9.3",
+    "author": "Solana Maintainers <maintainers@solana.foundation>",
+    "repository": "https://github.com/solana-labs/wallet-adapter",
+    "license": "Apache-2.0",
+    "files": [
+        "public",
+        "src",
+        ".env",
+        "LICENSE",
+        "package.json",
+        "README.md",
+        "tsconfig.json",
+        "yarn.lock"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {}
+    "publishConfig": {
+        "access": "public"
+    },
+    "scripts": {
+        "clean": "shx rm -rf build/*",
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test"
+    },
+    "dependencies": {
+        "@craco/craco": "^6.2.0",
+        "@material-ui/core": "^4.12.3",
+        "@material-ui/icons": "^4.11.2",
+        "@solana/spl-token": "^0.1.8",
+        "@solana/wallet-adapter-ant-design": "^0.4.2",
+        "@solana/wallet-adapter-base": "^0.5.2",
+        "@solana/wallet-adapter-material-ui": "^0.9.2",
+        "@solana/wallet-adapter-react": "^0.9.2",
+        "@solana/wallet-adapter-react-ui": "^0.1.1",
+        "@solana/wallet-adapter-wallets": "^0.7.6",
+        "@solana/web3.js": "^1.22.0",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "@types/bs58": "^4.0.1",
+        "@types/jest": "^26.0.15",
+        "@types/node": "^12.0.0",
+        "@types/react": "^17.0.16",
+        "@types/react-dom": "^17.0.0",
+        "add": "^2.0.6",
+        "bs58": "^4.0.1",
+        "classnames": "^2.3.1",
+        "craco-less": "^1.18.0",
+        "lodash": "^4.17.21",
+        "node-sass": "^6.0.1",
+        "notistack": "^1.0.9",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-ga": "^3.3.0",
+        "react-scripts": "^4.0.3",
+        "typescript": "^4.1.2",
+        "web-vitals": "^1.0.1",
+        "yarn": "^1.22.11",
+        "react-router-dom": "^5.1.2"
+        
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
