--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "test": "craco test"
     },
     "dependencies": {
+        "@ant-design/icons": "^4.6.4",
         "@craco/craco": "^6.2.0",
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
@@ -44,21 +45,21 @@
         "@types/react": "^17.0.16",
         "@types/react-dom": "^17.0.0",
         "add": "^2.0.6",
+        "antd": "^4.16.13",
         "bs58": "^4.0.1",
         "classnames": "^2.3.1",
         "craco-less": "^1.18.0",
         "lodash": "^4.17.21",
         "node-sass": "^6.0.1",
-        "notistack": "^1.0.9",
+        "notistack": "^1.0.10",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-ga": "^3.3.0",
+        "react-router-dom": "^5.3.0",
         "react-scripts": "^4.0.3",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1",
-        "yarn": "^1.22.11",
-        "react-router-dom": "^5.1.2"
-        
+        "yarn": "^1.22.11"
     },
     "eslintConfig": {
         "extends": [
@@ -77,5 +78,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/react-router-dom": "^5.1.8"
     }
 }
