--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@craco/craco": "^6.2.0",
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
+        "@material-ui/lab": "^4.0.0-alpha.60",
+        "@project-serum/anchor": "^0.16.1",
         "@solana/spl-token": "^0.1.8",
         "@solana/wallet-adapter-ant-design": "^0.4.2",
         "@solana/wallet-adapter-base": "^0.5.2",
@@ -46,6 +48,7 @@
         "@types/react-dom": "^17.0.0",
         "add": "^2.0.6",
         "antd": "^4.16.13",
+        "aos": "^2.3.4",
         "bs58": "^4.0.1",
         "classnames": "^2.3.1",
         "craco-less": "^1.18.0",
@@ -53,10 +56,13 @@
         "node-sass": "^6.0.1",
         "notistack": "^1.0.10",
         "react": "^17.0.2",
+        "react-countdown": "^2.3.2",
         "react-dom": "^17.0.2",
         "react-ga": "^3.3.0",
         "react-router-dom": "^5.3.0",
         "react-scripts": "^4.0.3",
+        "styled-components": "^5.3.1",
+        "swiper": "^7.0.6",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1",
         "yarn": "^1.22.11"
@@ -80,6 +86,8 @@
         ]
     },
     "devDependencies": {
-        "@types/react-router-dom": "^5.1.8"
+        "@types/aos": "^3.0.4",
+        "@types/react-router-dom": "^5.1.8",
+        "@types/styled-components": "^5.1.14"
     }
 }
